--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ Data/*csv filter=lfs diff=lfs merge=lfs -text
 Data/*.csv filter=lfs diff=lfs merge=lfs -text
 Data/data_37.csv filter=lfs diff=lfs merge=lfs -text
 Data/nanContent.csv filter=lfs diff=lfs merge=lfs -text
+Data/news-Data/*.csv filter=lfs diff=lfs merge=lfs -text
